--- a/views/main/QuizPlay.ejs
+++ b/views/main/QuizPlay.ejs
@@ -1,1 +1,128 @@
-<% console.log(Question) %>
+<!DOCTYPE html>
+<head>
+<title>Player</title>
+<link rel="styelsheet" type="text/css" href="/Styles/main.css" />
+<style>
+
+.player-container
+{
+  min-height: 85vh;
+  max-height: auto;
+  margin-top: 20px
+}
+
+.question-container
+{
+  min-height: 80vh;
+  max-height: auto;
+  width: 90%
+}
+
+.answers
+{
+  min-height: 400px;
+  max-height: auto;
+  width: 100%;
+  word-break: break-all;
+}
+
+@media (max-width: 500px)
+{
+  .player-container
+  {
+    margin-top: 20px;
+  }
+}
+
+</style>
+</head>
+
+<body class="bg-indigo-900">
+
+<%- include("../partials/Nav") %>
+
+<div class="player-container flex justify-center items-center w-full ">
+
+<div class="question-container  flex flex-col justify-around items-center">
+
+<h1 class="text-4xl text-white text-bold text-center title"></h1>
+
+<div class="answers flex items-center justify-around flex-col p-6">
+
+</div>
+
+</div>
+</div>
+
+<script>
+
+let InitialQuestionTitle = <%- JSON.stringify(Question) %>.question;
+let InitialAnswers = [...<%-JSON.stringify(Question)%>.incorrect_answers,<%-JSON.stringify(Question) %>.correct_answer].sort();
+let answersContainer = document.querySelector(".answers");
+let questionTitle = document.querySelector(".title");
+
+
+createUIForQuestion(InitialQuestionTitle,InitialAnswers);
+
+function getNextQuestion(currentAnswer)
+{
+  //make request passing in players id and the currentAnswer
+  fetch("/quizPlayer/getNextQuestion",
+  {
+    headers:
+    {
+      "Content-Type": "application/json",
+    },
+    method: "POST",
+    body: JSON.stringify({id: "<%= PlayerID %>",answer: currentAnswer})
+  })
+  .then(res => res.json())
+  .then(data =>
+    {
+      console.log(data);
+      //check if the data sent back has a QuizComplete property
+      if(data.hasOwnProperty("QuizComplete"))
+      {
+        //if so check if user was won or lost and inform them accordingly
+        if(data.Win === true)
+        {
+          return alert("you have won");
+        }
+
+        alert("you lost");
+      }
+
+
+      createUIForQuestion(data.QuestionOBJ.question,[...data.QuestionOBJ.incorrect_answers,data.QuestionOBJ.correct_answer].sort());
+    })
+}
+
+function createUIForQuestion(question,answers)
+{
+  question.replace(/&#039;/g,"");
+  questionTitle.innerText = question.replace(/&quot;/g,"");
+
+
+  answersContainer.innerHTML = " ";
+
+  answers.forEach((answer) =>
+  {
+    let answerText = document.createElement("h2");
+
+    answerText.innerText = answer;
+
+    answerText.classList.add("text-lg", "bg-blue-200", "p-2", "w-3/4", "my-6","rounded-lg","hover:bg-blue-300","text-center","cursor-pointer","text-blue-900");
+
+    answerText.addEventListener("click",() =>
+    {
+      getNextQuestion(answer);
+    })
+
+    answersContainer.appendChild(answerText);
+  })
+}
+
+</script>
+</body>
+
+</html>
