--- a/views/main/QuizPlay.ejs
+++ b/views/main/QuizPlay.ejs
@@ -26,11 +26,22 @@
   word-break: break-all;
 }
 
-@media (max-width: 500px)
+.win-popup,.lose-popup
+{
+  height: 500px;
+  width: 30%;
+}
+
+@media (max-width: 800px)
 {
   .player-container
   {
     margin-top: 20px;
+  }
+
+  .win-popup,.lose-popup
+  {
+      width: 80%;
   }
 }
 
@@ -39,13 +50,50 @@
 
 <body class="bg-indigo-900">
 
+<div class="fixed h-screen w-screen bg-gray-800 bg-opacity-50 flex flex-col justify-center items-center hidden overlay">
+
+<div class="win-popup bg-gray-300 rounded-lg flex flex-col items-center justify-around hidden">
+<h1 class="text-center text-4xl font-bold text-blue-700 ">Great! You won</h1>
+<div class="w-full">
+<h2 class="text-center text-3xl font-bold text-blue-900 mb-4">You Got!</h2>
+<div class="rewards w-full flex justify-around">
+  <div class="flex items-center">
+  <h4 class="text-xl text-green-400 points-text">80</h4>
+  <h3 class="text-xl text-green-500">P</h3>
+  </div>
+
+  <div class="flex items-center">
+  <i class="fas fa-coins fa-lg text-orange-400"></i>
+  <h4 class="text-xl text-yellow-800 mr-8 coins-text">80</h4>
+  </div>
+</div>
+
+</div>
+<button class="w-3/4 py-1 px-4 bg-orange-500 hover:bg-orange-600 transition duration-500 text-orange-100" onclick="redirectToSearch()">Continue</button>
+</div>
+
+<div class="lose-popup bg-gray-300 rounded-lg flex flex-col items-center justify-around hidden">
+<h1 class="text-center text-4xl font-bold text-blue-700 ">Oh no! You Lost</h1>
+<div>
+<h2 class="text-center text-3xl font-bold text-blue-900 mb-4">You Got!</h2>
+<h3 class="text-center text-3xl font-bold text-blue-900 correct-answers">6/10</h3>
+</div>
+<div class="flex w-full justify-around flex-row-reverse">
+<button class="w-1/3 py-1 px-4 bg-orange-500 hover:bg-orange-600 transition duration-500 text-orange-100" onclick="redirectToSearch()">Continue</button>
+<button class="w-1/3 py-1 px-4 bg-orange-500 hover:bg-orange-600 transition duration-500 text-orange-100" onclick="refreshPage()">Retry</button>
+</div>
+</div>
+
+</div>
+
+
 <%- include("../partials/Nav") %>
 
 <div class="player-container flex justify-center items-center w-full ">
 
 <div class="question-container  flex flex-col justify-around items-center">
 
-<h1 class="text-4xl text-white text-bold text-center title"></h1>
+<h1 class="text-4xl text-white text-bold text-center title break-word max-h-screen"></h1>
 
 <div class="answers flex items-center justify-around flex-col p-6">
 
@@ -79,17 +127,27 @@ function getNextQuestion(currentAnswer)
   .then(res => res.json())
   .then(data =>
     {
-      console.log(data);
       //check if the data sent back has a QuizComplete property
       if(data.hasOwnProperty("QuizComplete"))
       {
         //if so check if user was won or lost and inform them accordingly
         if(data.Win === true)
         {
-          return alert("you have won");
+          document.querySelector(".overlay").classList.remove("hidden");
+          document.querySelector(".win-popup").classList.remove("hidden");
+
+          document.querySelector("points-text").innerText = data.Points;
+          document.querySelector("coins-text").innerText = data.Coins;
+
+          return;
         }
 
-        alert("you lost");
+        document.querySelector(".overlay").classList.remove("hidden");
+        document.querySelector(".lose-popup").classList.remove("hidden");
+
+        document.querySelector(".correct-answers").innerText = `${data.CorrectAnswers}/10`;
+
+        return;
       }
 
 
@@ -120,6 +178,16 @@ function createUIForQuestion(question,answers)
 
     answersContainer.appendChild(answerText);
   })
+}
+
+function redirectToSearch()
+{
+  window.location.href = "/main/quizSearch";
+}
+
+function refreshPage()
+{
+  window.location.href = window.location.href;
 }
 
 </script>
