--- a/views/main/CQuizPlay.ejs
+++ b/views/main/CQuizPlay.ejs
@@ -47,6 +47,12 @@
   }
 }
 
+.incorrect-answers-display
+{
+  width: 100%;
+  height: 70%;
+}
+
 </style>
 </head>
 
@@ -55,10 +61,11 @@
 <div class="fixed h-screen w-screen bg-gray-800 bg-opacity-50 flex flex-col justify-center items-center hidden overlay">
 
 <div class="win-popup bg-gray-300 rounded-lg flex flex-col items-center justify-around hidden">
-<h1 class="text-center text-4xl font-bold text-blue-700 ">Great! You won</h1>
+<h1 class="text-center text-4xl font-bold text-blue-700 ">Great! You Completed The Quiz</h1>
 <div class="w-full">
+<div class="rewards w-full flex justify-around  flex-col items-center hidden">
 <h2 class="text-center text-3xl font-bold text-blue-900 mb-4">You Got!</h2>
-<div class="rewards w-full flex justify-around">
+<div class="w-full flex justify-around">
   <div class="flex items-center">
   <h4 class="text-xl text-green-400 points-text">80</h4>
   <h3 class="text-xl text-green-500">P</h3>
@@ -69,25 +76,25 @@
   <h4 class="text-xl text-yellow-800 mr-8 coins-text">80</h4>
   </div>
 </div>
-
+<p class="p-2 text-center text-blue-600 word-break">Note you only get a reward once for completeing a Community Quiz<p>
 </div>
-<button class="w-3/4 py-1 px-4 bg-orange-500 hover:bg-orange-600 transition duration-500 text-orange-100" onclick="redirectToSearch()">Continue</button>
 </div>
-
+<h2 class="text-center text-3xl font-bold text-blue-900 mb-4 correct_answers">You Got!</h2>
+<h3 class="text-blue-700 underline WrongAnswers-display cursor-pointer">See Incorrect Answers</h3>
+<div class="flex w-full justify-around flex-row-reverse">
+<button class="w-1/3 py-1 px-4 bg-orange-500 hover:bg-orange-600 transition duration-500 text-orange-100" onclick="redirectToSearch()">Continue</button>
+<button class="w-1/3 py-1 px-4 bg-orange-500 hover:bg-orange-600 transition duration-500 text-orange-100" onclick="refreshPage()">Retry</button>
+</div>
+</div>
 <div class="lose-popup bg-gray-300 rounded-lg flex flex-col items-center justify-around hidden">
-<h1 class="text-center text-4xl font-bold text-blue-700 ">Oh no! You Lost</h1>
-<div>
-<h2 class="text-center text-3xl font-bold text-blue-900 mb-4">You Got!</h2>
-<h3 class="text-center text-3xl font-bold text-blue-900 correct-answers">6/10</h3>
+<div class="incorrect-answers-display overflow-scroll w-full">
 </div>
 <div class="flex w-full justify-around flex-row-reverse">
 <button class="w-1/3 py-1 px-4 bg-orange-500 hover:bg-orange-600 transition duration-500 text-orange-100" onclick="redirectToSearch()">Continue</button>
 <button class="w-1/3 py-1 px-4 bg-orange-500 hover:bg-orange-600 transition duration-500 text-orange-100" onclick="refreshPage()">Retry</button>
 </div>
 </div>
-
 </div>
-
 
 <%- include("../partials/Nav") %>
 
@@ -132,22 +139,34 @@ function getNextQuestion(currentAnswer)
       //check if the data sent back has a QuizComplete property
       if(data.hasOwnProperty("QuizComplete"))
       {
-        //if so check if user was won or lost and inform them accordingly
-        if(data.Win === true)
-        {
-          document.querySelector(".overlay").classList.remove("hidden");
-          document.querySelector(".win-popup").classList.remove("hidden");
-
-          document.querySelector("points-text").innerText = data.Points;
-          document.querySelector("coins-text").innerText = data.Coins;
-
-          return;
-        }
-
         document.querySelector(".overlay").classList.remove("hidden");
-        document.querySelector(".lose-popup").classList.remove("hidden");
+        document.querySelector(".win-popup").classList.remove("hidden");
 
-        document.querySelector(".correct-answers").innerText = `${data.CorrectAnswers}/10`;
+      if(data.CorrectAnswers !== data.QuizLength)
+      {
+        document.querySelector(".WrongAnswers-display").addEventListener("click",() =>
+        {
+          document.querySelector(".lose-popup").classList.remove("hidden");
+          document.querySelector(".win-popup").classList.add("hidden");
+        })
+      }
+
+        if(data.Reward === true)
+        {
+          document.querySelector(".rewards").classList.remove("hidden");
+          document.querySelector(".points-text").innerText = 20;
+          document.querySelector(".coins-text").innerText = 15;
+
+        }
+        document.querySelector(".correct_answers").innerText = `${data.CorrectAnswers}/${data.QuizLength}`;
+
+        if(data.hasOwnProperty("WrongAnswers"))
+        {
+          data.WrongAnswers.forEach((answer) =>
+          {
+            createWrongAnswer(answer.Question,answer.Answer);
+          })
+        }
 
         return;
       }
@@ -183,7 +202,7 @@ function createUIForQuestion(question,answers)
 
 function redirectToSearch()
 {
-  window.location.href = "/main/quizSearch";
+  window.location.href = "/main/Community";
 }
 
 function refreshPage()
@@ -191,6 +210,22 @@ function refreshPage()
   window.location.href = window.location.href;
 }
 
+function createWrongAnswer(question,answer)
+{
+   let container = document.createElement("DIV");
+   let questionText = document.createElement("h2");
+   let answerText = document.createElement("h3");
+
+   questionText.innerText = `${question}:`;
+   answerText.innerText = answer;
+
+   container.appendChild(questionText);
+   container.appendChild(answerText);
+
+   container.classList.add("flex","justify-around");
+
+   document.querySelector(".incorrect-answers-display").appendChild(container);
+}
 
 
 </script>
