--- a/views/partials/Nav.ejs
+++ b/views/partials/Nav.ejs
@@ -22,7 +22,7 @@
 
 <div class="flex items-center bg-purple-700 h-12 w-48  rounded-full hover:bg-purple-600 shadow-md Laptop:my-4 Mobile:my-0">
 <i class="fas fa-users text-blue-100 p-4 fa-lg"></i>
-<a href="/main/Comunnity" class="text-indigo-200  text-center">Community Quizzes</a>
+<a href="/main/Community" class="text-indigo-200  text-center">Community Quizzes</a>
 </div>
 
 <div class="flex items-center bg-purple-700 h-12 w-32  rounded-full hover:bg-purple-600 shadow-md Laptop:my-4 Mobile:my-0">
