Testing commiting via atom than CL

--- a/views/main/Home.ejs
+++ b/views/main/Home.ejs
@@ -2,15 +2,29 @@
 <head>
 <title>Home</title>
 <link rel="stylesheet" type="text/css" href="/Styles/main.css" />
+
+<style>
+
+.content-container
+{
+  min-height: 85vh;
+  max-height: auto;
+}
+
+</style>
+
 </head>
 
 <body class="bg-indigo-900">
 
 <%- include("../partials/Nav") %>
 
+<div class="content-container  flex justify-center Mobile:flex-col Mobile:justify-start Mobile:items-center">
 
 
+</div>
 
+<script src="/Scripts/Home.js">  </script>
 </body>
 
 </html>
