--- a/views/main/Home.ejs
+++ b/views/main/Home.ejs
@@ -7,9 +7,57 @@
 
 .content-container
 {
-  min-height: 85vh;
-  max-height: auto;
+  height: 85vh;
 }
+
+.layout
+{
+  width: 70vw;
+  height: 80vh;
+}
+
+
+.slides
+{
+  height: 80%;
+}
+
+
+
+table
+{
+  height: 80%;
+}
+
+.pagination
+{
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  bottom: 0;
+  height: 10%;
+}
+
+.com
+{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+  justify-items: center;
+  height: auto;
+  grid-row-gap: 20px;
+}
+
+.card
+{
+  width: 350px;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%2375afbf' fill-opacity='0.73' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  min-height: 200px;
+  max-height: auto;
+  padding: 20px;
+}
+
 
 </style>
 
@@ -19,8 +67,45 @@
 
 <%- include("../partials/Nav") %>
 
-<div class="content-container  flex justify-center Mobile:flex-col Mobile:justify-start Mobile:items-center">
+<div class="content-container  flex justify-center items-center">
 
+<div class="layout Mobile:w-11/12  flex flex-col justify-between items-center">
+
+<h1 class="text-3xl font-bold p-4 text-blue-100 text-center">Top 10 players</h1>
+
+
+<div class="slides w-full relative">
+
+<div class="w-full h-full flex justify-center ">
+
+<table class="w-10/12 shadow-2xl">
+
+<thead class="bg-teal-700 text-white text-xl">
+<th class="w-1/3 p-4">Name</th>
+<th class="w-1/3 p-4">Points</th>
+<th class="w-1/3 p-4">Coins</th>
+<th class="w-1/3 p-4">Quizzes Completed</th>
+</thead>
+
+<tbody>
+<% topPlayers.forEach((player) =>
+{%>
+  <tr class=" text-center bg-teal-800 text-lg text-gray-300 break-all">
+  <td class="p-2"><%= player.Username %></td>
+  <td><%= player.Points %></td>
+  <td><%= player.Coins %></td>
+  <td><%= player.CompletedQuizzes.length %></td>
+  </tr>
+<%})%>
+</tbody>
+
+</table>
+
+</div>
+
+</div>
+
+</div>
 
 </div>
 
