--- a/views/main/Home.ejs
+++ b/views/main/Home.ejs
@@ -69,16 +69,14 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 <div class="content-container  flex justify-center items-center">
 
-<div class="layout Mobile:w-11/12  flex flex-col justify-between items-center">
+<div class="layout Mobile:w-8/12  flex flex-col justify-between items-center">
 
 <h1 class="text-3xl font-bold p-4 text-blue-100 text-center">Top 10 players</h1>
 
 
-<div class="slides w-full relative">
+<div class="w-full h-full flex justify-center Mobile:w-1/4">
 
-<div class="w-full h-full flex justify-center ">
-
-<table class="w-10/12 shadow-2xl">
+<table class="w-10/12 shadow-2xl Mobile:w-1/2">
 
 <thead class="bg-teal-700 text-white text-xl">
 <th class="w-1/3 p-4">Name</th>
@@ -107,9 +105,6 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 </div>
 
-</div>
-
-<script src="/Scripts/Home.js">  </script>
 </body>
 
 </html>
